problem shooting Week 2

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -31,6 +31,14 @@ Here is an image:
 
 And here is a	[link](../index.html).
 
+
+##### Week 2: 2D Design and Cutting
+
+Here is an image: 
+
+![image of embroidery](./sew.png)
+
+And here is a [link](../index.html).
 </xmp>
 </body>
 
