--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week2: 2D Design and Cutting](./02_2D Design and Cutting/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
