--- a/index.html
+++ b/index.html
@@ -28,26 +28,62 @@
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week2: 2D Design and Cutting](./02_2D Design and Cutting/index.html)
+      [Week 2: 2D Design and Cutting](./02/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week 3](./03/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week 4](.04/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week 5](./05/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week 6](./06/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 7](./07/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 8](./08/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 9](./09/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 10](./10/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 11](./11/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 12](./12/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 13](./13/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 14](./14/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Final Project](./Final Project/index.html)
     </div>
   </div>
 </div>
