--- a/index.html
+++ b/index.html
@@ -5,22 +5,44 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div style="align-items: left; justify-content:left;" class="container-fluid">
-    <h3 class="nav-title"> PS70: Intro to Digital Fabrication</h3>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
-      <h4><a class="nav-link" href="./about.html">About</a></h4>
-    </div>
+
+<nav class="navbar navbar-expand-sm navbar-dark bg-success">
+  <h2 class="navbar-brand"> PS70: Intro to Digital Fabrication</h2>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./about.html">About</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Weekly projects
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="./01_intro/index.html">Week 1</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="./FinalProject/index.html">Finalproject</a>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
+
+ 
+
 
 <body>
 
 <xmp style="display:none;">
+<style>
+body {border: 5px dashed; darkblue; background-color:powderblue ;
+</style>
+<div class="container-fluid pt-3 bg-100 text-center">
 
-<div class="container-fluid bg-3 text-center">
-  
   <div class="row">
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
@@ -32,58 +54,58 @@
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 3](./03/index.html)
+      [Week 3: Hand tools and Fabrication](./03/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 4](.04/index.html)
+      [Week 4: Microcontroller Programming](.04/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 5](./05/index.html)
+      [Week 5: 3D Design & Printing](./05/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 6](./06/index.html)
+      [Week 6: Electronic Input Devices](./06/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 7](./07/index.html)
+      [Week 7: Electronic Output Devices](./07/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 8](./08/index.html)
+      [Week 8: CNC Milling, Molding & Casting](./08/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 9](./09/index.html)
+      [Week 9: Radio, Wifi, Bluetooth](./09/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 10](./10/index.html)
+      [Week 10: Machine Building and End Effectors](./10/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 11](./11/index.html)
+      [Week 11: Computer Programming](./11/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 12](./12/index.html)
+      [Week 12: Wildcard ](./12/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 13](./13/index.html)
+      [Week 13: Project Integration](./13/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 14](./14/index.html)
+      [Week 14: Project Prep](./14/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Final Project](./Final Project/index.html)
+      [Final Project](./FinalProject/index.html)
     </div>
   </div>
 </div>
