--- a/index.html
+++ b/index.html
@@ -2,37 +2,40 @@
 <html lang="en">
 
 <title>PS70: Intro to Digital Fabrication </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
+<head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="image.css">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark bg-success">
-  <h2 class="navbar-brand"> PS70: Intro to Digital Fabrication</h2>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+  <div class="collapse navbar-collapse" id="collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="./index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./about.html">About</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Weekly projects
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="./01_intro/index.html">Week 1</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="./FinalProject/index.html">Finalproject</a>
-        </div>
-      </li>
+      <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">
+        Weekly projects
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="./01_intro/index.html">Week 1</a>
+        <a class="dropdown-item" href="./02/index.html">Week 2</a>
+        <a class="dropdown-item" href="./03/index.html">Week 3</a>
+      </div>
     </ul>
   </div>
 </nav>
-
- 
 
 
 <body>
@@ -42,23 +45,22 @@
 body {border: 5px dashed; darkblue; background-color:powderblue ;
 </style>
 <div class="container-fluid pt-3 bg-100 text-center">
-
   <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 1: Introduction](./01_intro/index.html)
+        <div class="fullwrap">
+          <img src="./01_intro/sew.png"/>
+          <div class="fullcap">
+           Microcontroller Programming<br>
+          <button>[Week 1](.01_intro/index.html)</button>
+        </div>
     </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 2: 2D Design and Cutting](./02/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 3: Hand tools and Fabrication](./03/index.html)
-    </div>
-  </div>
 
-  <div class="row">
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 2: Microcontroller Programming](.02/index.html)<div class="row">
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 3: Microcontroller Programming](.03/index.html)<div class="row">
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
       [Week 4: Microcontroller Programming](.04/index.html)
@@ -107,7 +109,6 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
       ![sewing image](./01_intro/sew.png) 
       [Final Project](./FinalProject/index.html)
     </div>
-  </div>
 </div>
 </div>
 
