--- a/index.html
+++ b/index.html
@@ -46,24 +46,32 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
 </style>
 <div class="container-fluid pt-3 bg-100 text-center">
   <div class="row">
+        <div class="fullwrap">
+          <img src="./01_intro/sew.png"/>
+          <div class="fullcap">
+           Introduction and Documentation<br>
+          <button>Week 1</button>
+        </div>
+    </div>
+  </div>
     <div class="col-sm-4">
         <div class="fullwrap">
           <img src="./01_intro/sew.png"/>
           <div class="fullcap">
-           Microcontroller Programming<br>
-          <button>[Week 1](.01_intro/index.html)</button>
+           2D Design and Cutting<br>
+          <button>[Week 2](./02/index.html)</button>
         </div>
     </div>
 
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 2: Microcontroller Programming](.02/index.html)<div class="row">
+      [Week 2: Microcontroller Programming](./02/index.html)<div class="row">
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 3: Microcontroller Programming](.03/index.html)<div class="row">
+      [Week 3: Microcontroller Programming](./03/index.html)<div class="row">
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week 4: Microcontroller Programming](.04/index.html)
+      [Week 4: Microcontroller Programming](./04/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
