--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
           <img src="./01_intro/sew.png"/>
           <div class="fullcap">
            Introduction and Documentation<br>
-          <button>Week 1</button>
+          <button>Week 1[./01_intro/index.html</button>
         </div>
     </div>
   </div>
@@ -62,61 +62,22 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
           <button>[Week 2](./02/index.html)</button>
         </div>
     </div>
-
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 2: Microcontroller Programming](./02/index.html)<div class="row">
+        <div class="fullwrap">
+          <img src="./01_intro/sew.png"/>
+          <div class="fullcap">
+           Hand tools and Fabrication<br>
+          <button>[Week 3](./03/index.html)</button>
+        </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 3: Microcontroller Programming](./03/index.html)<div class="row">
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 4: Microcontroller Programming](./04/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 5: 3D Design & Printing](./05/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 6: Electronic Input Devices](./06/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 7: Electronic Output Devices](./07/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 8: CNC Milling, Molding & Casting](./08/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 9: Radio, Wifi, Bluetooth](./09/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 10: Machine Building and End Effectors](./10/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 11: Computer Programming](./11/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 12: Wildcard ](./12/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 13: Project Integration](./13/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 14: Project Prep](./14/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Final Project](./FinalProject/index.html)
-    </div>
+        <div class="fullwrap">
+          <img src="./01_intro/sew.png"/>
+          <div class="fullcap">
+           Microcontroller programming<br>
+          <button>[Week 4](./04/index.html)</button>
+        </div>
+    
+   
 </div>
 </div>
 
