--- a/index.html
+++ b/index.html
@@ -46,38 +46,41 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
 </style>
 <div class="container-fluid pt-3 bg-100 text-center">
   <div class="row">
+        <div class="column"
         <div class="fullwrap">
           <img src="./01_intro/sew.png"/>
           <div class="fullcap">
            Introduction and Documentation<br>
-          <button>Week 1[./01_intro/index.html</button>
+          <button>[Week 1](./01_intro/index.html)</button>
         </div>
     </div>
   </div>
-    <div class="col-sm-4">
+    <div class="column">
         <div class="fullwrap">
           <img src="./01_intro/sew.png"/>
           <div class="fullcap">
            2D Design and Cutting<br>
           <button>[Week 2](./02/index.html)</button>
         </div>
+      </div>
     </div>
-    <div class="col-sm-4">
+    <div class="column">
         <div class="fullwrap">
           <img src="./01_intro/sew.png"/>
           <div class="fullcap">
            Hand tools and Fabrication<br>
           <button>[Week 3](./03/index.html)</button>
         </div>
+      </div>
+    </div>
     <div class="col-sm-4">
         <div class="fullwrap">
           <img src="./01_intro/sew.png"/>
           <div class="fullcap">
            Microcontroller programming<br>
           <button>[Week 4](./04/index.html)</button>
-        </div>
-    
-   
+        </div> 
+      </div>
 </div>
 </div>
 
