--- a/index.html
+++ b/index.html
@@ -47,31 +47,27 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
 <div class="container-fluid pt-3 bg-100 text-center">
   <div class="row">
         <div class="column"
-        <div class="fullwrap">
+        <div class="fullwrap"></div>
           <img src="./01_intro/sew.png"/>
-          <div class="fullcap">
+          <div class="fullcap"></div>
            Introduction and Documentation<br>
           <button>[Week 1](./01_intro/index.html)</button>
         </div>
-    </div>
   </div>
     <div class="column">
-        <div class="fullwrap">
+        <div class="fullwrap"><div>
           <img src="./01_intro/sew.png"/>
-          <div class="fullcap">
+          <div class="fullcap"></div>
            2D Design and Cutting<br>
           <button>[Week 2](./02/index.html)</button>
         </div>
-      </div>
-    </div>
     <div class="column">
-        <div class="fullwrap">
+        <div class="fullwrap"></div>
           <img src="./01_intro/sew.png"/>
-          <div class="fullcap">
+          <div class="fullcap"></div>
            Hand tools and Fabrication<br>
           <button>[Week 3](./03/index.html)</button>
         </div>
-      </div>
     </div>
     <div class="col-sm-4">
         <div class="fullwrap">
