--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
 <div class="container-fluid pt-3 bg-100 text-center">
   <div class="row">
         <div class="column">
-        <div class="fullwrap"></div>
+        <div class="fullwrap">
           <img src="./01_intro/sew.png"/>
-          <div class="fullcap"></div>
+          <div class="fullcap">
            Introduction and Documentation<br>
           <button>[Week 1](./01_intro/index.html)</button>
+        </div>
+        </div>
         </div>
   
 </div>
