--- a/index.html
+++ b/index.html
@@ -50,15 +50,30 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
         <div class="fullwrap">
           <img src="./01_intro/sew.png"/>
           <div class="fullcap">
-           Introduction and Documentation<br>
-          <button>[Week 1](./01_intro/index.html)</button>
-        </div>
-        </div>
-        </div>
-  
-</div>
+            Introduction and Documentation<br>
+            <button>[Week 1](./01_intro/index.html)</button>
+          </div>
+        </div>  
+  </div>
 </div>
 
+<!-- Image 1 -->
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>Introduction and Documentation</div>
+</div>
+
+<!-- Image 2 -->
+<div class="content_img">
+ <img src='"./01_intro/sew.png" width='100%' height='100%'>
+ <div>2D</div>
+</div>
+
+<!-- Image 3 -->
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>Image 3 Text</div> 
+</div>
 </xmp>
 </body>
 
