--- a/index.html
+++ b/index.html
@@ -45,17 +45,6 @@
 body {border: 5px dashed; darkblue; background-color:powderblue ;
 </style>
 <div class="container-fluid pt-3 bg-100 text-center">
-  <div class="row">
-        <div class="column">
-        <div class="fullwrap">
-          <img src="./01_intro/sew.png"/>
-          <div class="fullcap">
-            Introduction and Documentation<br>
-            <button>[Week 1](./01_intro/index.html)</button>
-          </div>
-        </div>  
-  </div>
-</div>
 
 <!-- Image 1 -->
 <div class="content_img">
@@ -65,7 +54,7 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
 
 <!-- Image 2 -->
 <div class="content_img">
- <img src='"./01_intro/sew.png" width='100%' height='100%'>
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
  <div>2D</div>
 </div>
 
