--- a/index.html
+++ b/index.html
@@ -49,20 +49,83 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
 <!-- Image 1 -->
 <div class="content_img">
  <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>Introduction and Documentation</div>
+ <div>[Introduction and Documentation](./01_intro/index.html)</div>
 </div>
 
 <!-- Image 2 -->
 <div class="content_img">
  <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>2D</div>
+ <div>[2D Design & Cutting](./02/index.html)</div>
 </div>
 
 <!-- Image 3 -->
 <div class="content_img">
  <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>Image 3 Text</div> 
+ <div>[Hand tools and Fabrication](./03/index.html)</div> 
 </div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Microcontroller programming](./04/index.html)</div> 
+
+ <div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[3D Design and Printing](./05/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Electonic Input Devices](./06/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Electonic Output Devices](./07/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[CNC Milling, Molding & Casting](./08/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Radio, Wifi, Bluetooth](./09/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Machine Building and End Effectors](./10/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Computer Programming](./11/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Wildcard](./12/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Project Integration](./13/index.html)</div> 
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Project Prep](./14/index.html)</div> 
+</div>
+</div>
+
+<div class="content_img">
+ <img src="./01_intro/sew.png" width='100%' height='100%'>
+ <div>[Final Project](./FinalProject/index.html)</div> 
+</div>
+</div>
+
+
 </xmp>
 </body>
 
