--- a/index.html
+++ b/index.html
@@ -44,88 +44,66 @@
 <style>
 body {border: 5px dashed; darkblue; background-color:powderblue ;
 </style>
-<div class="container-fluid pt-3 bg-100 text-center">
 
-<!-- Image 1 -->
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Introduction and Documentation](./01_intro/index.html)</div>
+<div class="container-fluid bg-3 text-center">
+  
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Introduction and Documentation](./01_intro/index.html)</div>
+    </div>
+  </div>
+
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Introduction and Documentation](./01_intro/index.html)</div>
+    </div>
+  </div>
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[2D Design & Cutting](./02/index.html)</div>
+    </div>
+  </div>
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Hand tools and Fabrication](./03/index.html)</div>
+    </div>
+  </div>
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Microcontroller programming](./04/index.html)</div>
+    </div>
+  </div>
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[3D Design and Printing](./05/index.html)</div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Electonic Input Devices](./06/index.html)</div>
+    </div>
+  </div>
 </div>
-
-<!-- Image 2 -->
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[2D Design & Cutting](./02/index.html)</div>
-</div>
-
-<!-- Image 3 -->
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Hand tools and Fabrication](./03/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Microcontroller programming](./04/index.html)</div> 
-
- <div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[3D Design and Printing](./05/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Electonic Input Devices](./06/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Electonic Output Devices](./07/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[CNC Milling, Molding & Casting](./08/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Radio, Wifi, Bluetooth](./09/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Machine Building and End Effectors](./10/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Computer Programming](./11/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Wildcard](./12/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Project Integration](./13/index.html)</div> 
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Project Prep](./14/index.html)</div> 
-</div>
-</div>
-
-<div class="content_img">
- <img src="./01_intro/sew.png" width='100%' height='100%'>
- <div>[Final Project](./FinalProject/index.html)</div> 
-</div>
-</div>
-
-
 </xmp>
 </body>
 
