--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <xmp style="display:none;">
 <style>
-body {border: 5px dashed; darkblue; background-color:powderblue ;
+body {border: 20px; darkblue; background-color:powderblue ;
 </style>
 
 <div class="container-fluid bg-3 text-center">
@@ -55,14 +55,6 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
     </div>
   </div>
 
-
-<div class="row">
-    <div class="col-sm-4">
-      <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
-        <div>[Introduction and Documentation](./01_intro/index.html)</div>
-    </div>
-  </div>
 
 <div class="row">
     <div class="col-sm-4">
@@ -103,6 +95,82 @@ body {border: 5px dashed; darkblue; background-color:powderblue ;
         <div>[Electonic Input Devices](./06/index.html)</div>
     </div>
   </div>
+
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Electronic Output Devices](./07/index.html)</div>
+    </div>
+  </div>
+
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[CNC Milling, Molding and Casting](./08/index.html)</div>
+    </div>
+  </div>
+
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Radio, Wifi, Bluetooth](./09/index.html)</div>
+    </div>
+  </div>
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Machine Building and End Effectors](./10/index.html)</div>
+    </div>
+  </div>
+
+  <div class="row">M
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Computer Programming](./11/index.html)</div>
+    </div>
+  </div>
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Wildcard](./12/index.html)</div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Project Integration](./13/index.html)</div>
+    </div>
+  </div>
+
+<div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Project Prep](./14/index.html)</div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="content_img">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <div>[Final Project](./FinalProject/index.html)</div>
+    </div>
+  </div>
+
 </div>
 </xmp>
 </body>
