--- a/index.html
+++ b/index.html
@@ -45,65 +45,44 @@
 body {border: 20px; darkblue; background-color:powderblue ;
 </style>
 
-<div class="container-fluid bg-3 text-center">
-  
-  <div class="row">
-    <div class="col-sm-4">
+
+<div class="container"
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Introduction and Documentation](./01_intro/index.html)</div>
     </div>
-  </div>
 
-
-<div class="row">
-    <div class="col-sm-4">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[2D Design & Cutting](./02/index.html)</div>
     </div>
-  </div>
 
-<div class="row">
-    <div class="col-sm-4">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Hand tools and Fabrication](./03/index.html)</div>
     </div>
-  </div>
 
-<div class="row">
-    <div class="col-sm-4">
+
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Microcontroller programming](./04/index.html)</div>
     </div>
-  </div>
-
-<div class="row">
-    <div class="col-sm-4">
+ 
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[3D Design and Printing](./05/index.html)</div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-sm-4">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Electonic Input Devices](./06/index.html)</div>
     </div>
-  </div>
 
-
-<div class="row">
-    <div class="col-sm-4">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Electronic Output Devices](./07/index.html)</div>
     </div>
-  </div>
+ 
 
 
 <div class="row">
