--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
         <a class="dropdown-item" href="./01_intro/index.html">Week 1</a>
         <a class="dropdown-item" href="./02/index.html">Week 2</a>
         <a class="dropdown-item" href="./03/index.html">Week 3</a>
+        <a class="dropdown-item" href="./04/index.html">Week 4</a>
+        <a class="dropdown-item" href="./05/index.html">Week 5</a>
+        <a class="dropdown-item" href="./06/index.html">Week 6</a>
+        <a class="dropdown-item" href="./07/index.html">Week 7</a>
+        <a class="dropdown-item" href="./08/index.html">Week 8</a>
+        <a class="dropdown-item" href="./09/index.html">Week 9</a>
+        <a class="dropdown-item" href="./10/index.html">Week 10</a>
+        <a class="dropdown-item" href="./11/index.html">Week 11</a>
+        <a class="dropdown-item" href="./12/index.html">Week 12</a>
+        <a class="dropdown-item" href="./13/index.html">Week 13</a>
+        <a class="dropdown-item" href="./14/index.html">Week 14</a>
+        <a class="dropdown-item" href="./FinalProject/index.html">Final Project</a>
       </div>
     </ul>
   </div>
@@ -50,106 +62,81 @@ body {border: 20px; darkblue; background-color:powderblue ;
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Introduction and Documentation](./01_intro/index.html)</div>
-    </div>
+      </div>
 
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[2D Design & Cutting](./02/index.html)</div>
-    </div>
+      </div>
 
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Hand tools and Fabrication](./03/index.html)</div>
-    </div>
+      </div>
 
 
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Microcontroller programming](./04/index.html)</div>
-    </div>
+      </div>
  
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[3D Design and Printing](./05/index.html)</div>
-    </div>
+      </div>
 
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Electonic Input Devices](./06/index.html)</div>
-    </div>
+      </div>
 
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Electronic Output Devices](./07/index.html)</div>
-    </div>
+      </div>
  
-
-
-<div class="row">
-    <div class="col-sm-4">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[CNC Milling, Molding and Casting](./08/index.html)</div>
-    </div>
-  </div>
+      </div>
 
 
-<div class="row">
-    <div class="col-sm-4">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Radio, Wifi, Bluetooth](./09/index.html)</div>
-    </div>
-  </div>
-
-<div class="row">
-    <div class="col-sm-4">
+      </div>
+  
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Machine Building and End Effectors](./10/index.html)</div>
-    </div>
-  </div>
+      </div>
 
-  <div class="row">M
-    <div class="col-sm-4">
+
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Computer Programming](./11/index.html)</div>
-    </div>
-  </div>
-
-<div class="row">
-    <div class="col-sm-4">
+      </div>
+ 
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Wildcard](./12/index.html)</div>
-    </div>
-  </div>
+      </div>
 
-  <div class="row">
-    <div class="col-sm-4">
+
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Project Integration](./13/index.html)</div>
-    </div>
-  </div>
+      </div>
 
-<div class="row">
-    <div class="col-sm-4">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Project Prep](./14/index.html)</div>
-    </div>
-  </div>
+      </div>
 
-  <div class="row">
-    <div class="col-sm-4">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Final Project](./FinalProject/index.html)</div>
-    </div>
-  </div>
-
+      </div>
 </div>
 </xmp>
 </body>
