--- a/index.html
+++ b/index.html
@@ -58,83 +58,84 @@ body {border: 20px; darkblue; background-color:powderblue ;
 </style>
 
 
-<div class="container"
+<div class="container">
+
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[Introduction and Documentation](./01_intro/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[2D Design & Cutting](./02/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[Hand tools and Fabrication](./03/index.html)</div>
       </div>
 
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[Microcontroller programming](./04/index.html)</div>
       </div>
  
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[3D Design and Printing](./05/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[Electonic Input Devices](./06/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[Electronic Output Devices](./07/index.html)</div>
       </div>
  
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[CNC Milling, Molding and Casting](./08/index.html)</div>
       </div>
 
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[Radio, Wifi, Bluetooth](./09/index.html)</div>
       </div>
   
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png" >
         <div>[Machine Building and End Effectors](./10/index.html)</div>
       </div>
 
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png" >
         <div>[Computer Programming](./11/index.html)</div>
       </div>
  
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[Wildcard](./12/index.html)</div>
       </div>
 
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png">
         <div>[Project Integration](./13/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png" >
         <div>[Project Prep](./14/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/sew.png" >
         <div>[Final Project](./FinalProject/index.html)</div>
       </div>
 </div>
