--- a/index.html
+++ b/index.html
@@ -61,23 +61,23 @@ body {border: 20px; darkblue; background-color:powderblue ;
 <div class="container">
 
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Introduction and Documentation](./01_intro/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[2D Design & Cutting](./02/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Hand tools and Fabrication](./03/index.html)</div>
       </div>
 
 
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Microcontroller programming](./04/index.html)</div>
       </div>
  
@@ -87,55 +87,55 @@ body {border: 20px; darkblue; background-color:powderblue ;
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Electonic Input Devices](./06/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Electronic Output Devices](./07/index.html)</div>
       </div>
  
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[CNC Milling, Molding and Casting](./08/index.html)</div>
       </div>
 
 
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Radio, Wifi, Bluetooth](./09/index.html)</div>
       </div>
   
       <div class="content_img">
-        <img src="./01_intro/sew.png" >
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Machine Building and End Effectors](./10/index.html)</div>
       </div>
 
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" >
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Computer Programming](./11/index.html)</div>
       </div>
  
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Wildcard](./12/index.html)</div>
       </div>
 
 
       <div class="content_img">
-        <img src="./01_intro/sew.png">
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Project Integration](./13/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" >
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Project Prep](./14/index.html)</div>
       </div>
 
       <div class="content_img">
-        <img src="./01_intro/sew.png" >
+        <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Final Project](./FinalProject/index.html)</div>
       </div>
 </div>
