--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <style>
 body {border: 20px; darkblue; background-color:powderblue ;
 </style>
-<div class="container">
+<div class="containernew">
       <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Introduction and Documentation](./01_intro/index.html)</div>
