--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body {border: 20px; darkblue; background-color:powderblue ;
       </div>
     </div>
     <div class="col-sm-4">
-      !<div class="content_img">
+      <div class="content_img">
         <img src="./01_intro/sew.png" width='100%' height='100%'>
         <div>[Electonic Input Devices](./06/index.html)</div>
       </div>
