--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@ body {border: 20px; darkblue; background-color:powderblue ;
   <div class="row">
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./01_intro/01.png" width='100%' height='100%'>
         <div>[Introduction and Documentation](./01_intro/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./02/02.png" width='100%' height='100%'>
         <div>[2D Design & Cutting](./02/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./03/03.png" width='100%' height='100%'>
         <div>[Hand tools and Fabrication](./03/index.html)</div>
       </div>
     </div>
@@ -84,19 +84,19 @@ body {border: 20px; darkblue; background-color:powderblue ;
   <div class="row">
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./04/04.png" width='100%' height='100%'>
         <div>[Microcontroller programming](./04/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png"  width='100%' height='100%'>
+        <img src="./05/05.png"  width='100%' height='100%'>
         <div>[3D Design and Printing](./05/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./06/06.png" width='100%' height='100%'>
         <div>[Electonic Input Devices](./06/index.html)</div>
       </div>
     </div>
@@ -105,19 +105,19 @@ body {border: 20px; darkblue; background-color:powderblue ;
   <div class="row">
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./07/07.png" width='100%' height='100%'>
         <div>[Electronic Output Devices](./07/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./08/08.png" width='100%' height='100%'>
         <div>[CNC Milling, Molding and Casting](./08/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./09/09.png" width='100%' height='100%'>
         <div>[Radio, Wifi, Bluetooth](./09/index.html)</div>
       </div>
     </div>
@@ -126,19 +126,19 @@ body {border: 20px; darkblue; background-color:powderblue ;
   <div class="row">
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./10/10.png" width='100%' height='100%'>
         <div>[Machine Building and End Effectors](./10/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./11/11.png" width='100%' height='100%'>
         <div>[Computer Programming](./11/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./12/12.png" width='100%' height='100%'>
         <div>[Wildcard](./12/index.html)</div>
       </div>
     </div>
@@ -147,19 +147,19 @@ body {border: 20px; darkblue; background-color:powderblue ;
   <div class="row">
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./13/13.png" width='100%' height='100%'>
         <div>[Project Integration](./13/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./14/14.png" width='100%' height='100%'>
         <div>[Project Prep](./14/index.html)</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="content_img">
-        <img src="./01_intro/sew.png" width='100%' height='100%'>
+        <img src="./FinalProject/final.png" width='100%' height='100%'>
         <div>[Final Project](./FinalProject/index.html)</div>
       </div>
     </div>
