--- a/About/about.html
+++ b/About/about.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="../index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../about.html">About</a>
+        <a class="nav-link" href="../about/about.html">About</a>
       </li>
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">
