About link update

--- a/About/about.html
+++ b/About/about.html
@@ -55,7 +55,7 @@
 <xmp style="display:none;">
 
 
-### <h1 class="Avantgarde" font-weight=600px > About Me </h1>
+<h1 class="Avantgarde" font-weight=600px > About Me </h1>
 
 <body class="Avantgarde" font-weight=200px align="justify">
 
