--- a/About/about.html
+++ b/About/about.html
@@ -62,7 +62,7 @@
 
 <p3>Outside of school, I love practicing other languages such as Spanish and French, exploring good Asian cuisine in Boston and hiking. </p3>
 
-<img src="./About/about.png" 
+<img src="../About/about.png" 
      width="300" 
      height="300" class="center" />
 
