--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <xmp style="display:none;">
 <style>
-body {border: 20px; darkblue; background-color:powderblue ;
+body {border: 20px; darkblue; background-color:powderblue ;}
 </style>
 
 <div class="container">
