colour change about

--- a/About/about.html
+++ b/About/about.html
@@ -52,7 +52,7 @@
 </nav>
 
 <style>
-body {border: 20px; darkblue; background-color: lightsalmon;}
+body {border: 20px; darkblue; background-color: lightseagreen;}
 </style>
 
 <body class="Avantgarde" font-weight=200px align="justify">
