pink about page

--- a/About/about.html
+++ b/About/about.html
@@ -52,11 +52,11 @@
 </nav>
 
 <style>
-body {border: 20px; darkblue; background-color: lightseagreen;}
+body {border: 20px; darkblue; background-color: lightpink;}
 </style>
 
-<body class="Avantgarde" font-weight=200px align="justify">
-<h1 class="Avantgarde" font-weight=400px > About Me </h1>
+<body class="Avantgarde" font-weight=300px align="justify">
+<h1 class="Avantgarde" font-weight=700px > About Me </h1>
 
 
 <p>Hello! My name is Layla and I am a junior studying Environmental Science and Engineering. My parents are from Michigan but I was born and raised in Hong Kong. My goal after college is to use engineering to  establish and manage water distribution systems in rural parts of Latin America, in collaboration with local partners and community members.</p>
