--- a/About/about.html
+++ b/About/about.html
@@ -52,7 +52,7 @@
 </nav>
 
 <style>
-body {border: 20px; darkblue; background-color: rgb(232, 245, 233);}
+body {background-color: rgb(232, 245, 233);}
 </style>
 
 <body class="Avantgarde" font-weight=300px align="justify">
