--- a/About/about.html
+++ b/About/about.html
@@ -65,10 +65,11 @@ body {background-color: rgb(232, 245, 233);}
 
 <p>Outside of school, I love practicing other languages such as Spanish and French, exploring good Asian cuisine in Boston and hiking. </p>
 
-<img src="../About/about.png" 
+<div class = "center">
+  <img src="../About/about.png" 
      width="300" 
-     height="300" class="center" />
-
+     height="300" />
+</div>
 
 
 </body>
