--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -57,11 +57,13 @@
      height="300" />
 </div>
 
+<style>
+body {background-color: rgb(232, 245, 233);}
+</style>
+
 
 
 <body class="Avantgarde" font-weight=300px align="justify">
-<br> 
-
 <h1 font weight=700px> Project Proposal</h1>
 
 <p>Objective:</p> 
