--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -74,7 +74,7 @@ Many water systems costs thousands of dollars for material alone (especially the
 
 <div class = "center">
   <img src="../01_intro/design1.jpg" 
-     />
+     width ="200" height="300"/>
 </div>
 
 <b>Part 1: The water pump</b>
@@ -122,7 +122,7 @@ I would like to investigate whether I could make the panels from scratch as well
 
 <div class = "center">
   <img src="../01_intro/design2.jpg" 
-     />
+     width ="330" height="140"/>
 </div>
 
 <u> References </u>
