--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -120,6 +120,8 @@ This device would involve an internal filter containing activated carbon and oth
 
 I would like to investigate whether I could make the panels from scratch as well but this may be completely out of scope and require a unrealistically in depth understanding of photovoltaics. 
 
+<u> Figure 3: Overal Design of 2nd project idea </u>
+
 <div class = "center">
   <img src="../01_intro/design2.jpg" 
      width ="330" height="140"/>
