--- a/About/about.html
+++ b/About/about.html
@@ -58,14 +58,12 @@ body {background-color: rgb(232, 245, 233);}
 <body class="Avantgarde" font-weight=300px align="justify">
 <h1 class="Avantgarde" font-weight=700px > About Me </h1>
 
-<xmp style="display:none;">
-<br>
 
-Hello! My name is Layla and I am a junior studying Environmental Science and Engineering. My parents are from Michigan but I was born and raised in Hong Kong. My goal after college is to use engineering to  establish and manage water distribution systems in rural parts of Latin America, in collaboration with local partners and community members.
+<p>Hello! My name is Layla and I am a junior studying Environmental Science and Engineering. My parents are from Michigan but I was born and raised in Hong Kong. My goal after college is to use engineering to  establish and manage water distribution systems in rural parts of Latin America, in collaboration with local partners and community members.</p>
 
-This summer I worked with a water non-profit and spent the majority of my time living in indigenous communities in Panama. After talking to various different people on their needs and biggest struggles around water systems, I realized that cost of these systems was a big inhibitor, forcing the majority of communities to rely purely on donations from non-profits. Because of this I would like to focus my final project in creating a cost-effective device that would improve the ability of communities to pay for and manage their own water systems. Outside of the project I hope this class will give me the necessary hands-on skills to further my engineering career and learn how to make more useful devices!
+<p>This summer I worked with a water non-profit and spent the majority of my time living in indigenous communities in Panama. After talking to various different people on their needs and biggest struggles around water systems, I realized that cost of these systems was a big inhibitor, forcing the majority of communities to rely purely on donations from non-profits. Because of this I would like to focus my final project in creating a cost-effective device that would improve the ability of communities to pay for and manage their own water systems. Outside of the project I hope this class will give me the necessary hands-on skills to further my engineering career and learn how to make more useful devices!</p>
 
-Outside of school, I love practicing other languages such as Spanish and French, exploring good Asian cuisine in Boston and hiking. 
+<p>Outside of school, I love practicing other languages such as Spanish and French, exploring good Asian cuisine in Boston and hiking. </p>
 
 <div class = "center">
   <img src="../About/about.png" 
